GN: Use the correct defaults for templates invoked via target().

Previously calling
  target("foo", "bar")
where "foo" is a template applied the defaults for the function named "target"
(since this is the function call) rather than "foo".

This change properly applies the defaults for "foo" in this case.

BUG=624564

Review-Url: https://codereview.chromium.org/2148093002
Cr-Commit-Position: refs/heads/master@{#405547}

Former-commit-id: af92718f5526ce94ea8fcb4118f850fb9a7517b3